Protein ID/Gene ID conversion; enrichment analysis;

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.1.0
 Author: Wubing Zhang
 Maintainer: Wubing Zhang <wzhang@ds.dfci.harvard.edu>
 Description: Model-based Analysis of Ubiquitin-Proteosome System.
-Depends: R (>= 3.5), ggplot2, stats, grDevices, utils
-Imports: Biobase, DESeq2, limma, msmsTests, impute, GSVA, metap
+Depends: R (>= 3.5)
+Imports: Biobase, DESeq2, limma, msmsTests, impute, metap, ggplot2, stats, grDevices, utils, quickAnalyze, enrichplot
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
