--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(BarView)
 export(DEAnalyze)
 export(EnrichAnalyzer)
 export(PrattR)
+export(RabitInput)
 export(ScatterView)
 export(TransGeneID)
 export(TransProteinID)
