--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,10 @@ export(ridgeplot)
 export(ssNES)
 import(Biobase)
 import(DESeq2)
+import(MAGeCKFlute)
 import(biomaRt)
+import(ggplot2)
+import(ggpubr)
 import(limma)
 import(msmsTests)
 importFrom(GO.db,GOBPCHILDREN)
