remove quickAnalyze dependency and prioritize DEAnalyze

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getProteinAnn)
 export(go2ont)
 export(go2term)
 export(goplot)
+export(gsGetter)
 export(gsScore)
 export(gseaplot)
 export(hclustView)
@@ -32,22 +33,28 @@ export(ridgeplot)
 export(ssNES)
 import(Biobase)
 import(DESeq2)
+import(GSVA)
 import(MAGeCKFlute)
 import(biomaRt)
 import(ggplot2)
 import(ggpubr)
 import(limma)
+import(metap)
 import(msmsTests)
 importFrom(GO.db,GOBPCHILDREN)
 importFrom(GO.db,GOCCCHILDREN)
 importFrom(GO.db,GOMFCHILDREN)
+importFrom(GSVA,gsva)
 importFrom(MAGeCKFlute,EnrichAnalyzer)
 importFrom(MAGeCKFlute,TransGeneID)
 importFrom(MAGeCKFlute,enrich.GSE)
 importFrom(MAGeCKFlute,enrich.HGT)
 importFrom(MAGeCKFlute,enrich.ORT)
 importFrom(MAGeCKFlute,getGeneAnn)
+importFrom(MAGeCKFlute,gsGetter)
 importFrom(data.table,fread)
+importFrom(dendextend,colored_bars)
+importFrom(dendextend,labels_colors)
 importFrom(enrichplot,cnetplot)
 importFrom(enrichplot,dotplot)
 importFrom(enrichplot,emapplot)
@@ -55,9 +62,6 @@ importFrom(enrichplot,goplot)
 importFrom(enrichplot,gseaplot)
 importFrom(enrichplot,heatplot)
 importFrom(enrichplot,ridgeplot)
-importFrom(quickAnalyze,BarView)
-importFrom(quickAnalyze,DEAnalyze)
-importFrom(quickAnalyze,ScatterView)
-importFrom(quickAnalyze,gsScore)
-importFrom(quickAnalyze,hclustView)
+importFrom(ggpubr,theme_pubr)
+importFrom(ggrepel,geom_text_repel)
 importMethodsFrom(AnnotationDbi,mget)
