Add a pipeline to analysis proteomics data efficiently

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(DEAnalyze)
 export(DataCorrelation)
 export(EnrichAnalyzer)
+export(MAUPSr)
 export(PrattR)
 export(PreprocessCPTAC)
 export(RabitInput)
@@ -10,6 +11,7 @@ export(TransGeneID)
 export(TransProteinID)
 export(cnetplot)
 export(countNA)
+export(deComplex)
 export(dotplot)
 export(emapplot)
 export(enrich.GSE)
@@ -23,13 +25,13 @@ export(goplot)
 export(gsGetter)
 export(gsScore)
 export(gseaplot)
-export(hclustView)
 export(heatplot)
 export(imputeNA)
 export(memeR)
-export(normalizeMS)
 export(normalizeProteomeDiscoverer)
+export(normalizeProteomics)
 export(pcView)
+export(qcProteomics)
 export(ridgeplot)
 export(ssNES)
 import(Biobase)
@@ -55,8 +57,6 @@ importFrom(MAGeCKFlute,enrich.HGT)
 importFrom(MAGeCKFlute,enrich.ORT)
 importFrom(MAGeCKFlute,gsGetter)
 importFrom(data.table,fread)
-importFrom(dendextend,colored_bars)
-importFrom(dendextend,labels_colors)
 importFrom(enrichplot,cnetplot)
 importFrom(enrichplot,dotplot)
 importFrom(enrichplot,emapplot)
