--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,21 @@
 Package: rMAUPS
 Type: Package
-Title: Model-based analysis of ubiquitin-proteome system based protein degradation.
+Title: Model-based analysis of ubiquitin-proteome system based protein
+        degradation.
 Version: 0.1.0
 Author: Wubing Zhang
 Maintainer: Wubing Zhang <wzhang@ds.dfci.harvard.edu>
 Description: Model-based Analysis of Ubiquitin-Proteosome System.
 Depends: R (>= 3.5)
-Imports: optparse, DESeq2, limma, MAGeCKFlute, msmsTests, impute, metap, ggpubr, Biobase, AnnotationDbi,
-        GSVA, dendextend, ggplot2, ggrepel, stringr, enrichplot, GO.db, biomaRt, data.table
+Imports: optparse, DESeq2, limma, MAGeCKFlute, msmsTests, impute,
+        metap, ggpubr, Biobase, AnnotationDbi, GSVA, dendextend,
+        ggplot2, ggrepel, stringr, enrichplot, GO.db, biomaRt,
+        data.table
+Suggests: BiocStyle, knitr, rmarkdown
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
+NeedsCompilation: no
+Packaged: 2020-03-10 02:07:11 UTC; Wubing
