--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,66 +2,56 @@
 
 export(DEAnalyze)
 export(DataCorrelation)
-export(EnrichAnalyzer)
+export(DeComplex)
 export(MAUPSr)
-export(PrattR)
-export(PreprocessCPTAC)
+export(MemeR)
+export(ProteomicsQC)
 export(RabitInput)
+export(Residualplot)
+export(ScatterView)
+export(SpectraCounteBayes)
 export(TransGeneID)
-export(TransProteinID)
-export(cnetplot)
+export(VarianceBoxplot)
+export(VarianceScatterplot)
+export(arrangePngs)
+export(corComplex)
 export(countNA)
-export(deComplex)
-export(dotplot)
-export(emapplot)
-export(enrich.GSE)
-export(enrich.HGT)
-export(enrich.ORT)
 export(filterN)
-export(getProteinAnn)
-export(go2ont)
-export(go2term)
-export(goplot)
 export(gsGetter)
 export(gsScore)
-export(gseaplot)
-export(heatplot)
 export(imputeNA)
-export(memeR)
 export(normalizeProteomeDiscoverer)
 export(normalizeProteomics)
 export(pcView)
-export(qcProteomics)
-export(ridgeplot)
+export(prattR)
+export(processCPTAC)
 export(ssNES)
+export(view)
 import(Biobase)
-import(DESeq2)
-import(GSVA)
 import(MAGeCKFlute)
-import(biomaRt)
-import(edgeR)
 import(ggplot2)
 import(ggpubr)
-import(limma)
-import(metap)
-import(msmsTests)
+import(impute)
+import(shiny)
 import(stringr)
-importFrom(GO.db,GOBPCHILDREN)
-importFrom(GO.db,GOCCCHILDREN)
-importFrom(GO.db,GOMFCHILDREN)
+importFrom(DESeq2,DESeq)
+importFrom(DESeq2,DESeqDataSetFromMatrix)
+importFrom(DESeq2,lfcShrink)
 importFrom(GSVA,gsva)
-importFrom(MAGeCKFlute,EnrichAnalyzer)
+importFrom(MAGeCKFlute,ScatterView)
 importFrom(MAGeCKFlute,TransGeneID)
-importFrom(MAGeCKFlute,enrich.GSE)
-importFrom(MAGeCKFlute,enrich.HGT)
-importFrom(MAGeCKFlute,enrich.ORT)
 importFrom(MAGeCKFlute,gsGetter)
+importFrom(MSnbase,MSnSet)
 importFrom(data.table,fread)
-importFrom(enrichplot,cnetplot)
-importFrom(enrichplot,dotplot)
-importFrom(enrichplot,emapplot)
-importFrom(enrichplot,goplot)
-importFrom(enrichplot,gseaplot)
-importFrom(enrichplot,heatplot)
-importFrom(enrichplot,ridgeplot)
-importMethodsFrom(AnnotationDbi,mget)
+importFrom(edgeR,DGEList)
+importFrom(edgeR,calcNormFactors)
+importFrom(limma,eBayes)
+importFrom(limma,lmFit)
+importFrom(limma,topTable)
+importFrom(limma,voom)
+importFrom(matrixStats,colMedians)
+importFrom(metap,sumlog)
+importFrom(msmsEDA,pp.msms.data)
+importFrom(msmsTests,msms.edgeR)
+importFrom(msmsTests,msms.glm.pois)
+importFrom(msmsTests,msms.glm.qlll)
