--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,16 @@
 Package: rMAUPS
 Type: Package
-Title: Model-based analysis of ubiquitin-proteome system based protein
-        degradation.
-Version: 0.1.0
+Title: Model-based analysis of ubiquitin-proteome system based protein degradation.
+Version: 0.1.1
 Author: Wubing Zhang
 Maintainer: Wubing Zhang <wzhang@ds.dfci.harvard.edu>
 Description: Model-based Analysis of Ubiquitin-Proteosome System.
-Depends: R (>= 3.5)
-Imports: optparse, DESeq2, limma, MAGeCKFlute, msmsTests, impute,
-        metap, ggpubr, Biobase, AnnotationDbi, GSVA, dendextend,
-        ggplot2, ggrepel, stringr, enrichplot, GO.db, biomaRt,
-        data.table
+Depends: R (>= 3.5), stats, utils
+Imports: optparse, MAGeCKFlute, DESeq2, limma, msmsTests, MSnbase, msmsEDA, edgeR, impute, 
+  metap, Biobase, AnnotationDbi, GSVA, matrixStats, ggplot2, ggpubr, ggrepel, stringr, data.table, shiny
 Suggests: BiocStyle, knitr, rmarkdown
 License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
-NeedsCompilation: no
-Packaged: 2020-03-10 02:07:11 UTC; Wubing
