--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Wubing Zhang
 Maintainer: Wubing Zhang <wzhang@ds.dfci.harvard.edu>
 Description: Model-based Analysis of Ubiquitin-Proteosome System.
 Depends: R (>= 3.5), stats, utils
-Imports: optparse, MAGeCKFlute, DESeq2, limma, msmsTests, MSnbase, msmsEDA, edgeR, impute, 
+Imports: MAGeCKFlute, DESeq2, limma, msmsTests, MSnbase, msmsEDA, edgeR, impute, 
   metap, Biobase, AnnotationDbi, GSVA, matrixStats, ggplot2, ggpubr, ggrepel, stringr, data.table, shiny
 Suggests: BiocStyle, knitr, rmarkdown
 License: GPL (>=3)
