--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,25 @@ cache:
   directories:
     - ~/miniconda
 
+before_install:
+  # Set conda path info
+  - MINICONDA_PATH=$HOME/miniconda;
+  - MINICONDA_SUB_PATH=$MINICONDA_PATH/bin;
+  # Obtain miniconda installer
+  - if [[ -f $HOME/download/miniconda.sh ]]; then
+        echo "miniconda.sh for posix already available from cache";
+      else
+        mkdir -p $HOME/download;
+        if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+          echo "downloading miniconda.sh for linux";
+          wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+        elif  [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+          echo "downloading miniconda.sh for osx";
+          wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O $HOME/download/miniconda.sh;
+        fi;
+    fi;
+
+
 # install the package and dependencies:
 # - create directory for R libraries (if not already exists)
 # - create .Renviron with location of R libraries
@@ -37,9 +56,14 @@ cache:
 # - update all installed packages
 # - install package with dependencies
 install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
+  # Install miniconda
+  - if [[ -d $MINICONDA_SUB_PATH ]]; then
+        echo "miniconda for posix already available from cache";
+      else
+        echo "installing miniconda for posix";
+        bash $HOME/download/miniconda.sh -b -u -p $MINICONDA_PATH;
+    fi;
+  - export PATH="$MINICONDA_PATH:$MINICONDA_SUB_PATH:$PATH";
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
