Tried wubing's recommended way to install dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,24 +74,19 @@ install:
   #- echo 'R_LIBS=~/Rlib' > .Renviron
   - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
-  - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap
-  - conda install -c anaconda libnetcdf
-  - conda install -c bioconda bioconductor-clusterProfiler bioconductor-gsva 
-  #- conda install -c bioconda bioconductor-deseq2 
-  #- conda install -c bioconda bioconductor-limma 
-  #- Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
-  #- Rscript -e 'if(!"BiocManager" %in% rownames(installed.packages())) { install.packages("BiocManager", dependencies = TRUE) }'
-  #- Rscript -e 'update.packages(ask = FALSE, instlib = "~/Rlib")'
-  - Rscript -e 'BiocManager::install(c("DESeq2", "limma"), quiet=T)'
-  - Rscript -e 'BiocManager::install(c("msmsTests"))'
-  - Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
-  - Rscript -e 'BiocManager::install(c("MAGeCKFlute"))'
-  #- conda install -c bioconda bioconductor-msmstests bioconductor-impute bioconductor-biocstyle
-  #- conda install -c bioconda bioconductor-mageckflute 
-  - Rscript -e 'if(!"metap" %in% rownames(installed.packages())) { install.packages("metap", dependencies = TRUE) }'
-  - Rscript -e 'if(!"ggpubr" %in% rownames(installed.packages())) { install.packages("ggpubr", dependencies = TRUE) }'
-  - Rscript -e 'if(!"optparse" %in% rownames(installed.packages())) { install.packages("optparse", dependencies = TRUE) }'
+  #- conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap
+  #- conda install -c anaconda libnetcdf
+  #- conda install -c bioconda bioconductor-clusterProfiler bioconductor-gsva 
+  #- Rscript -e 'BiocManager::install(c("DESeq2", "limma"), quiet=T)'
+  #- Rscript -e 'BiocManager::install(c("msmsTests"))'
+  #- Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
+  #- Rscript -e 'BiocManager::install(c("MAGeCKFlute"))'
+  #- Rscript -e 'if(!"metap" %in% rownames(installed.packages())) { install.packages("metap", dependencies = TRUE) }'
+  #- Rscript -e 'if(!"ggpubr" %in% rownames(installed.packages())) { install.packages("ggpubr", dependencies = TRUE) }'
+  #- Rscript -e 'if(!"optparse" %in% rownames(installed.packages())) { install.packages("optparse", dependencies = TRUE) }'
   #- Rscript -e 'devtools::install_deps(pkg = ".", dependencies = TRUE)'
+  - conda install -c bioconda bioconductor-gsva bioconductor-deseq2 bioconductor-limma bioconductor-msmstests bioconductor-impute bioconductor-biomart bioconductor-go.db bioconductor-biocstyle
+  - Rscript -e 'devtools::install_github("WubingZhang/rMAUPS")'
 
 # Build and check package
 script:
