--- a/.travis.yml
+++ b/.travis.yml
@@ -69,23 +69,19 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda install r r-recommended
+  - conda install r r-recommended r-markdown
   #- mkdir -p ~/Rlib
   #- echo 'R_LIBS=~/Rlib' > .Renviron
   - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
   - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap
   - conda install -c anaconda libnetcdf
-  - conda install -c bioconda bioconductor-clusterProfiler bioconductor-gsva 
+  - conda install -c bioconda bioconductor-clusterProfiler bioconductor-gsva bioconductor-biocstyle
   - Rscript -e 'BiocManager::install(c("DESeq2", "limma"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("msmsTests"))'
   - Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("biomaRt", "GO.db"), quiet=T)'
-  #- Rscript -e 'BiocManager::install(c("MAGeCKFlute"))'
-  - Rscript -e 'if(!"metap" %in% rownames(installed.packages())) { install.packages("metap", dependencies = TRUE) }'
-  - Rscript -e 'if(!"ggpubr" %in% rownames(installed.packages())) { install.packages("ggpubr", dependencies = TRUE) }'
-  #- Rscript -e 'if(!"optparse" %in% rownames(installed.packages())) { install.packages("optparse", dependencies = TRUE) }'
-  #- Rscript -e 'devtools::install_deps(pkg = ".", dependencies = TRUE)'
+  # Alternative install
   #- conda install -c bioconda bioconductor-gsva bioconductor-deseq2 bioconductor-limma bioconductor-msmstests bioconductor-impute bioconductor-biomart bioconductor-go.db bioconductor-biocstyle
   #- Rscript -e 'devtools::install_github("WubingZhang/rMAUPS")'
 
