Clean up travis ci yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,6 @@ branches:
   only:
    - master
 
-# install R: use r-packages-precise (https://cran.r-project.org/bin/linux/ubuntu/precise/) 
-# as source which is white listed (https://github.com/travis-ci/apt-source-whitelist/)
-#addons:
-  #apt:
-    #sources:
-    #- r-packages-precise
-    #packages:
-    #- r-base-dev  
-    #- r-recommended
-    #- pandoc
-
 # cache local R libraries directory:
 cache:
   directories:
@@ -70,9 +59,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
   - conda install r r-recommended r-markdown
-  #- mkdir -p ~/Rlib
-  #- echo 'R_LIBS=~/Rlib' > .Renviron
-  - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
+  #- echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
   - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap
   - conda install -c anaconda libnetcdf
@@ -81,9 +68,6 @@ install:
   - Rscript -e 'BiocManager::install(c("msmsTests"))'
   - Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("biomaRt", "GO.db"), quiet=T)'
-  # Alternative install
-  #- conda install -c bioconda bioconductor-gsva bioconductor-deseq2 bioconductor-limma bioconductor-msmstests bioconductor-impute bioconductor-biomart bioconductor-go.db bioconductor-biocstyle
-  #- Rscript -e 'devtools::install_github("WubingZhang/rMAUPS")'
 
 # Build and check package
 script:
