remove MAUPS script from the rMAUPS package & add all the authors into documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: rMAUPS
 Type: Package
-Title: Model-based analysis of ubiquitin-proteome system based protein degradation.
+Title: Model-Based Analysis of Ubiquitin-Proteome System Based Protein Degradation.
 Version: 0.1.1
-Author: Wubing Zhang
+Author: Collin Tokheim, Wubing Zhang, Jun Ge, X. Shirley Liu
 Maintainer: Wubing Zhang <wzhang@ds.dfci.harvard.edu>
-Description: Model-based Analysis of Ubiquitin-Proteosome System.
+Description: We developed a computational analysis pipeline Model-based Analysis of 
+  the Ubiquitin-Proteasome System using R (rMAUPS), which performs computational analysis 
+  of proteomics data efficiently and effectively. rMAUPS comprises four significant 
+  modules, including quality control (QC), imputation, differential analysis, 
+  and integrative analysis.
 Depends: R (>= 3.5), stats, utils
 Imports: DESeq2, limma, msmsTests, MSnbase, msmsEDA, edgeR, impute, 
   metap, Biobase, GSVA, matrixStats, ggplot2, ggpubr, GO.db,
