--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
   - conda install r r-recommended r-markdown
   #- echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
-  - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap
+  - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap r-data.table
   - conda install -c anaconda libnetcdf
   - conda install -c bioconda bioconductor-gsva bioconductor-biocstyle 
   #- conda install -c bioconda bioconductor-deseq2
