--- a/.travis.yml
+++ b/.travis.yml
@@ -62,13 +62,16 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda install r r-recommended r-markdown
-  #- echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
+  - conda install r
+  #- conda install -c r r-recommended r-markdown r-biocmanager r-devtools
+  - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
-  - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap r-data.table r-rcpparmadillo
   - conda install -c anaconda libnetcdf
-  - conda install -c bioconda bioconductor-gsva bioconductor-biocstyle 
+  #- conda install -c conda-forge r-ggpubr r-metap r-data.table r-rcpparmadillo
+  #- conda install -c bioconda bioconductor-gsva bioconductor-biocstyle
   #- conda install -c bioconda bioconductor-deseq2
+  - Rscript -e 'install.packages(c("devtools", "BiocManager"))'
+  - Rscript -e 'BiocManager::install(c("GSVA", "BiocStyle"))'
   - Rscript -e 'BiocManager::install(c("DESeq2"))'
   - Rscript -e 'BiocManager::install(c("limma"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("msmsTests"))'
@@ -79,4 +82,4 @@ install:
 script:
   - R CMD build . --no-manual
   - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
-  - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran 
+  - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
