--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ branches:
    - master
 
 # cache local R libraries directory:
-cache:
-  directories:
-    - ~/miniconda
+# cache:
+#   directories:
+#     - ~/miniconda
 
 before_install:
   # Set conda path info
@@ -66,7 +66,7 @@ install:
   #- conda install -c r r-recommended r-markdown r-biocmanager r-devtools
   - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
-  - conda install -c anaconda libnetcdf
+  - conda install -c anaconda libnetcdf libxml2
   #- conda install -c conda-forge r-ggpubr r-metap r-data.table r-rcpparmadillo
   #- conda install -c bioconda bioconductor-gsva bioconductor-biocstyle
   #- conda install -c bioconda bioconductor-deseq2
