--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(limma,topTable)
 importFrom(limma,voom)
 importFrom(matrixStats,colMedians)
 importFrom(metap,sumlog)
+importFrom(msigdbr,msigdbr)
 importFrom(msmsEDA,pp.msms.data)
 importFrom(msmsTests,msms.edgeR)
 importFrom(msmsTests,msms.glm.pois)
