set some Rscript to be quiet, but not all, to avoid timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,13 +71,13 @@ install:
   #- conda install -c bioconda bioconductor-gsva bioconductor-biocstyle
   #- conda install -c bioconda bioconductor-deseq2
   - Rscript -e 'install.packages(c("devtools", "BiocManager"))'
-  - Rscript -e 'BiocManager::install(c("ggpubr", "metap", "ggrepel"))'
+  - Rscript -e 'BiocManager::install(c("ggpubr", "metap", "ggrepel"), quiet = TRUE)'
   - Rscript -e 'BiocManager::install(c("GSVA", "BiocStyle"))'
   - Rscript -e 'BiocManager::install(c("DESeq2"))'
-  - Rscript -e 'BiocManager::install(c("limma"))'
+  - Rscript -e 'BiocManager::install(c("limma"), quiet = TRUE)'
   - Rscript -e 'BiocManager::install(c("impute"))'
   - Rscript -e 'BiocManager::install(c("biomaRt"))'
-  - Rscript -e 'BiocManager::install(c("msmsTests"))'
+  - Rscript -e 'BiocManager::install(c("msmsTests"), quiet = TRUE)'
 
 # Build and check package
 script:
