--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ install:
   - Rscript -e 'BiocManager::install(c("DESeq2"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("limma"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
-  - Rscript -e 'BiocManager::install(c("biomaRt", "msigdb"), quiet=T)'
+  - Rscript -e 'BiocManager::install(c("biomaRt", "msigdbr"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("msmsTests"), quiet=T)'
 
 # Build and check package
