install pandoc to build vignettes

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,9 +67,8 @@ install:
   - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
   - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap r-data.table r-rcpparmadillo
-  - conda install -c anaconda libnetcdf libxml2
+  - conda install -c anaconda libnetcdf libxml2 pandoc
   - conda install -c bioconda bioconductor-gsva bioconductor-biocstyle
-  - conda install -c bioconda bioconductor-biocstyle
   - Rscript -e 'BiocManager::install(c("DESeq2"))'
   - Rscript -e 'BiocManager::install(c("limma"), quiet=T)'
   - Rscript -e 'BiocManager::install(c("impute"), quiet=T)'
