--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ install:
   - echo 'options(repos = "http://cran.rstudio.com")' > .Rprofile
   - echo '.travis.yml' > .Rbuildignore
   - conda install -c conda-forge r-devtools r-biocmanager r-ggpubr r-metap r-data.table r-rcpparmadillo
-  - conda install -c anaconda libnetcdf libxml2 pandoc
+  - conda install -c anaconda libnetcdf libxml2
   - conda install -c bioconda bioconductor-gsva bioconductor-biocstyle
   - Rscript -e 'BiocManager::install(c("DESeq2"))'
   - Rscript -e 'BiocManager::install(c("limma"), quiet=T)'
@@ -77,6 +77,6 @@ install:
 
 # Build and check package
 script:
-  - R CMD build . --no-manual
+  - R CMD build . --no-build-vignettes
   - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
   - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
