--- a/.travis.yml
+++ b/.travis.yml
@@ -80,4 +80,5 @@ install:
 script:
   - R CMD build . --no-build-vignettes
   - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
+  - cat NAMESPACE
   - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
