Added explicit namespace declaration

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: We developed a computational analysis pipeline Model-based Analysis
 Depends: R (>= 3.5), stats, utils
 Imports: DESeq2, limma, msmsTests, MSnbase, msmsEDA, edgeR, impute, 
   metap, Biobase, GSVA, matrixStats, ggplot2, ggpubr, msigdbr,
-  ggrepel, data.table, shiny, biomaRt, grDevices
+  ggrepel, data.table, shiny, biomaRt, grDevices, dplyr, httr, purrr, stringr
 Suggests: BiocStyle, knitr, rmarkdown
 License: GPL (>=3)
 Encoding: UTF-8
