--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(VarianceBoxplot)
 export(VarianceScatterplot)
 export(ViolinView)
 export(arrangePngs)
+export(browseProtStructure)
 export(corComplex)
 export(countNA)
 export(filterN)
@@ -33,16 +34,22 @@ export(normalizeProteomeDiscoverer)
 export(normalizeProteomics)
 export(pcView)
 export(retrieve_gs)
+export(searchProtSeq)
 export(view)
 export(writeGMT)
 import(Biobase)
 import(biomaRt)
+import(dplyr)
 import(ggplot2)
 import(ggpubr)
 import(ggrepel)
+import(httr)
 import(impute)
+import(jsonlite)
+import(purrr)
 import(shiny)
 import(stats)
+import(stringr)
 import(utils)
 importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
