Added new func to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(imputeNA)
 export(normalizeProteomeDiscoverer)
 export(normalizeProteomics)
 export(pcView)
+export(readPSPUbiquitin)
 export(retrieve_gs)
 export(searchProtSeq)
 export(view)
