Use importFrom instead of import to avoid complict functions from dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,19 +38,18 @@ export(retrieve_gs)
 export(searchProtSeq)
 export(view)
 export(writeGMT)
-import(Biobase)
-import(biomaRt)
-import(dplyr)
 import(ggplot2)
 import(ggpubr)
 import(ggrepel)
-import(httr)
 import(impute)
-import(purrr)
 import(shiny)
 import(stats)
-import(stringr)
 import(utils)
+importFrom(Biobase,AnnotatedDataFrame)
+importFrom(Biobase,ExpressionSet)
+importFrom(Biobase,exprs)
+importFrom(Biobase,pData)
+importFrom(Biobase,sampleNames)
 importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
 importFrom(DESeq2,lfcShrink)
@@ -58,10 +57,21 @@ importFrom(DESeq2,rlog)
 importFrom(DESeq2,varianceStabilizingTransformation)
 importFrom(GSVA,gsva)
 importFrom(MSnbase,MSnSet)
+importFrom(biomaRt,getBM)
+importFrom(biomaRt,getLDS)
+importFrom(biomaRt,listAttributes)
+importFrom(biomaRt,useMart)
 importFrom(data.table,melt)
+importFrom(dplyr,mutate)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
+importFrom(edgeR,estimateDisp)
+importFrom(edgeR,glmFit)
+importFrom(edgeR,glmLRT)
+importFrom(edgeR,topTags)
 importFrom(grDevices,col2rgb)
+importFrom(httr,GET)
+importFrom(httr,content)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
@@ -73,3 +83,13 @@ importFrom(msmsEDA,pp.msms.data)
 importFrom(msmsTests,msms.edgeR)
 importFrom(msmsTests,msms.glm.pois)
 importFrom(msmsTests,msms.glm.qlll)
+importFrom(purrr,compact)
+importFrom(purrr,imap)
+importFrom(purrr,map)
+importFrom(purrr,reduce)
+importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stringr,str_length)
+importFrom(stringr,str_locate_all)
+importFrom(stringr,str_sub)
